# Cidy_Drafting_Companion

./: .gitignore  docker-compose.yml  samconfig.toml  template.yaml
backend/: DEPLOY.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_artifacts.py
backend/cidy/artifact/: field_validators.py  models.py  sdg_validator.py  validation.py
backend/cidy/reference/: sdg.py
backend/cidy/schema/: loader.py  models.py
backend/cidy_api/: app.py  auth.py  authz.py  config.py  db.py  deps.py  dto.py  email_sink.py  lambda_handler.py  models_db.py  schema_registry.py
backend/cidy_api/llm/: assist.py  base.py  deps.py  fake.py  openai_provider.py  sdg_suggest.py
backend/cidy_api/repositories/: artifacts.py  auth_tokens.py  collaborators.py  users.py
backend/cidy_api/routers/: artifacts.py  assist.py  auth.py  collaborators.py  me.py  schemas.py
backend/examples/: demo_validate.py
backend/schemas/: da-concept-note.v19.json  rptc-activity-proposal.v2024.json
backend/tests/: test_smoke.py
backend/tests/api/: conftest.py  test_artifact_models.py  test_artifacts_repo.py  test_artifacts_router.py  test_artifacts_versioning.py  test_assist_endpoints.py  test_assist_service.py  test_auth_core.py  test_auth_router.py  test_authz.py  test_collaborators.py  test_config.py  test_cors.py  test_db.py  test_deploy_docs.py  test_health.py  test_lambda_handler.py  test_llm_provider.py  test_me.py  test_models.py  test_openai_provider.py  test_repositories.py  test_sam_template.py  test_schema_registry.py  (+4 more)
(+43 files in other folders)
