[project]
name = "cidy"
version = "0.1.0"
description = "CIdy Drafting Companion core domain library"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.6,<3"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["cidy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
