[project]
name = "cidy"
version = "0.1.0"
description = "CIdy Drafting Companion core domain library"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.6,<3",
  "email-validator>=2.1,<3",
  "fastapi>=0.110,<1",
  "pydantic-settings>=2.2,<3",
  "sqlalchemy>=2.0,<3",
  "psycopg[binary]>=3.1,<4",
  "alembic>=1.13,<2",
  "pyjwt>=2.8,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "uvicorn>=0.29"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["cidy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
